--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
 
 
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto Serif', serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,20 +19,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* a {
-  font-weight: 400;
-  color: black;
-  text-decoration: none;
-  text-underline-offset: 6px
-}
-
-a:hover {
-  text-decoration: underline;
-  color: rgb(234, 73, 153);
-  cursor: pointer;
-
-} */
-
 body {
   margin: 0;
   display: flex;
@@ -37,31 +26,6 @@ body {
   min-height: 100vh;
 }
 
-/* h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-} */
-
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
 
 .no-scrollbar {
   -ms-overflow-style: none;
@@ -75,17 +39,6 @@ button:focus-visible {
   /* Ẩn scrollbar trên Chrome/Safari */
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
+.font-playfair {
+  font-family: 'Playfair Display', serif;
 }
